force-app/main/default/objects/Speaker__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>This is a text field.</description>
    <inlineHelpText>Enter the company.</inlineHelpText>
    <label>Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>