force-app/main/default/objects/Speaker__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This is an email field .</description>
    <inlineHelpText>Enter your email.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>