force-app/main/default/objects/Speaker__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This is a phone field.</description>
    <inlineHelpText>Enter your phone number.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>