force-app/main/default/objects/Speaker__c/fields/Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_URL__c</fullName>
    <description>This is a Url field to provide speaker profile link.</description>
    <inlineHelpText>Enter a your Url.</inlineHelpText>
    <label>Profile URL</label>
    <type>Url</type>
</CustomField>